# Service-Panel

./: .gitignore  README.md  build-all.sh
.github/workflows/: build-linux.yml
backend/: Cargo.toml  build.rs
backend/src/: cli.rs  error.rs  main.rs  state.rs
backend/src/domain/: models.rs
backend/src/infra/: mod.rs  storage.rs  systemd.rs
backend/src/web/: handlers.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx  styles.css  types.ts
web/src/components/: AddGroupModal.tsx  AddServiceModal.tsx  BottomNav.tsx  ExecutionLogsCard.tsx  HeaderBar.tsx  JournalCard.tsx  Modal.tsx  ServiceGroupBoard.tsx  StatusCards.tsx  ToastStack.tsx  UnitFileEditorCard.tsx
web/src/hooks/: usePanelController.ts
web/src/lib/: api.ts  auth.ts
web/src/pages/: EditorPage.tsx  OverviewPage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx
